@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
+<set xmlns:android="http://schemas.android.com/apk/res/android" >
+<alpha
+    android:fromAlpha="0.1"
+    android:toAlpha="1.0"
+    android:duration="2000"
+/>
+<alpha
+    android:fromAlpha="0.9"
+    android:toAlpha="0.1"
+    android:duration="2000"
+    android:startOffset="2000"
+/>
+</set>
