@@ -14,161 +14,156 @@
 		android:scrollbars="vertical"
 	>
 
-		<TableLayout
+	<TableLayout
+		android:layout_height="wrap_content"
+		android:id="@+id/TableLayoutDeviceInfo"
+		android:layout_width="match_parent"
+	>
+		<TableRow
+			android:id="@+id/TableRowTrigger"
 			android:layout_height="wrap_content"
-			android:id="@+id/TableLayoutDeviceInfo"
 			android:layout_width="match_parent"
 		>
-			<TableRow
-				android:id="@+id/TableRowTrigger"
-				android:layout_height="wrap_content"
-				android:layout_width="match_parent"
-			>
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingRight="5dp"
-					android:textSize="18sp"
-					android:id="@+id/labelCurrentTrigger"
-					android:text="@+string/labelCurrentTrigger"
-				></TextView>
-				<TextView
-					android:text="@+id/TextView01"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingRight="5dp"
-					android:textSize="18sp"
-					android:id="@+id/tvCurrentTrigger"
-				></TextView>
-			</TableRow>
-			<TableRow
-				android:layout_height="wrap_content"
-				android:id="@+id/TableRowProfile"
-				android:layout_width="match_parent"
-				android:baselineAligned="true"
-			>
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingRight="5dp"
-					android:textSize="18sp"
-					android:id="@+id/labelCurrentProfile"
-					android:text="@+string/labelCurrentProfile"
-				></TextView>
-				<Spinner
-					android:layout_height="wrap_content"
-					android:layout_width="wrap_content"
-					android:id="@+id/spProfiles"
-					android:layout_weight=".1"
-				></Spinner>
-			</TableRow>
-			<TableRow
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/TableRowConfig"
-			>
-				<TextView
-					android:textSize="18sp"
-					android:paddingRight="5dp"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:id="@+id/labelConfig"
-					android:text="@string/labelConfig"
-				></TextView>
-				<TextView
-					android:textSize="18sp"
-					android:paddingRight="5dp"
-					android:text="@+id/TextView01"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:id="@+id/tvConfig"
-				></TextView>
-			</TableRow>
-			<TableRow
+			<TextView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:id="@+id/TableRowPulse"
-			>
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:id="@+id/spacerPulse"
-				></TextView>
-				<TextView
-					android:layout_height="wrap_content"
-					android:id="@+id/tvPulse"
-					android:layout_width="wrap_content"
-					android:text="No pulse"
-				></TextView>
-			</TableRow>
-			<TableRow
+				android:paddingRight="5dp"
+				android:textSize="18sp"
+				android:id="@+id/labelCurrentTrigger"
+				android:text="@+string/labelCurrentTrigger"
+			></TextView>
+			<TextView
+				android:text="@+id/TextView01"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:id="@+id/TableRowBattery"
-				android:layout_width="match_parent"
-			>
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingRight="5dp"
-					android:id="@+id/labelCurrentBattery"
-					android:text="@+string/labelCurrentBattery"
-					android:textSize="18sp"
-					android:paddingTop="10dp"
-				></TextView>
-				<TextView
-					android:text="@+id/TextView01"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingRight="5dp"
-					android:textSize="18sp"
-					android:id="@+id/tvBatteryLevel"
-				></TextView>
-			</TableRow>
-			<TableRow
+				android:paddingRight="5dp"
+				android:textSize="18sp"
+				android:id="@+id/tvCurrentTrigger"
+			></TextView>
+		</TableRow>
+		<TableRow
+			android:layout_height="wrap_content"
+			android:id="@+id/TableRowProfile"
+			android:layout_width="match_parent"
+			android:baselineAligned="true"
+		>
+			<TextView
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:id="@+id/TableRowPower"
-				android:layout_width="match_parent"
-			>
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingRight="5dp"
-					android:textSize="18sp"
-					android:id="@+id/labelAcPower"
-					android:text="@+string/labelAcPower"
-				></TextView>
-				<TextView
-					android:text="@+id/TextView01"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingRight="5dp"
-					android:textSize="18sp"
-					android:id="@+id/tvAcPower"
-				></TextView>
-			</TableRow>
-			<TableRow
+				android:paddingRight="5dp"
+				android:textSize="18sp"
+				android:id="@+id/labelCurrentProfile"
+				android:text="@+string/labelCurrentProfile"
+			></TextView>
+			<Spinner
 				android:layout_height="wrap_content"
-				android:id="@+id/TableRowBatteryCurrent"
-				android:layout_width="match_parent"
-			>
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingRight="5dp"
-					android:textSize="18sp"
-					android:id="@+id/labelBatteryCurrent"
-					android:text="@string/labelUsage"
-				></TextView>
-				<TextView
-					android:text="@+id/TextView01"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingRight="5dp"
-					android:textSize="18sp"
-					android:id="@+id/tvBatteryCurrent"
-				></TextView>
-			</TableRow>
-		</TableLayout>
+				android:layout_width="wrap_content"
+				android:id="@+id/spProfiles"
+				android:layout_weight=".1"
+			></Spinner>
+		</TableRow>
+	<TableRow
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content"
+		android:id="@+id/TableRowPulse"
+	>
+		<TextView
+			android:id="@+id/spacerPulse"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+		></TextView>
+		<TextView android:id="@+id/tvPulse" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="No pulse"></TextView>
+	</TableRow>
+		<TableRow
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/TableRowConfig"
+		>
+			<TextView
+				android:textSize="18sp"
+				android:paddingRight="5dp"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/labelConfig"
+				android:text="@string/labelConfig"
+			></TextView>
+			<TextView
+				android:textSize="18sp"
+				android:paddingRight="5dp"
+				android:text="@+id/TextView01"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/tvConfig"
+			></TextView>
+		</TableRow>
+		<TableRow
+			android:layout_height="wrap_content"
+			android:id="@+id/TableRowBattery"
+			android:layout_width="match_parent"
+		>
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:paddingRight="5dp"
+				android:id="@+id/labelCurrentBattery"
+				android:text="@+string/labelCurrentBattery"
+				android:textSize="18sp"
+				android:paddingTop="10dp"
+			></TextView>
+			<TextView
+				android:text="@+id/TextView01"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:paddingRight="5dp"
+				android:textSize="18sp"
+				android:id="@+id/tvBatteryLevel"
+			></TextView>
+		</TableRow>
+		<TableRow
+			android:layout_height="wrap_content"
+			android:id="@+id/TableRowPower"
+			android:layout_width="match_parent"
+		>
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:paddingRight="5dp"
+				android:textSize="18sp"
+				android:id="@+id/labelAcPower"
+				android:text="@+string/labelAcPower"
+			></TextView>
+			<TextView
+				android:text="@+id/TextView01"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:paddingRight="5dp"
+				android:textSize="18sp"
+				android:id="@+id/tvAcPower"
+			></TextView>
+		</TableRow>
+		<TableRow
+			android:layout_height="wrap_content"
+			android:id="@+id/TableRowBatteryCurrent"
+			android:layout_width="match_parent"
+		>
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:paddingRight="5dp"
+				android:textSize="18sp"
+				android:id="@+id/labelBatteryCurrent"
+				android:text="@string/labelUsage"
+			></TextView>
+			<TextView
+				android:text="@+id/TextView01"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:paddingRight="5dp"
+				android:textSize="18sp"
+				android:id="@+id/tvBatteryCurrent"
+			></TextView>
+		</TableRow>
+	</TableLayout>
 		<LinearLayout
 			android:layout_height="wrap_content"
 			android:layout_width="match_parent"
