@@ -9,7 +9,8 @@ V 3.0.0
 - new swipe friendly layout
 - initalise cputuner from (default) configurations
 - label powersave bias
-- update statics tab on click
+- update statics and log on click
+- animate pulsed service in list
 - minor things
 * bug fixes
 - start/stop notification entry on enable/disable
